# lattice-su2

./: README.md
data_analysis/: main.py
data_analysis/data_analysis/: analysis_functions.py
data_analysis/tests/: test_anafunc.py
dati5D/beta_a-1/: creutz_ratios_a-1.txt  spec_heat_a-1.txt
dati5D/beta_a-1/data/: template_input_a-1_1.5.in  template_input_a-1_1.7.in  template_input_a-1_1.9.in  template_input_a-1_2.1.in  template_input_a-1_2.2.in  template_input_a-1_2.25.in  template_input_a-1_2.3.in  template_input_a-1_2.325.in  template_input_a-1_2.35.in  template_input_a-1_2.375.in  template_input_a-1_2.4.in  template_input_a-1_2.425.in  template_input_a-1_2.45.in  template_input_a-1_2.5.in  (+6 more)
dati5D/beta_a-2/: creutz_ratios_a-2.txt  spec_heat_a-2.txt
dati5D/beta_a-3/: creutz_ratios_a-3.txt  creutz_ratios_a-3_s6.txt  spec_heat_a-3.txt  spec_heat_a-3_s6.txt
dati5D/beta_a-4/: creutz_ratios_a-4.txt  spec_heat_a-4.txt
dati5D/beta_a0/: creutz_ratios_a0.txt  spec_heat_a0.txt
su2/: Makefile  Makefile.am  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  configure.ac
su2-1.1.0/: Makefile  Makefile.am  Makefile.in  NEWS  config.h  config.status  configure  configure.ac
su2-1.1.0/include/: gauge_conf.h  macro.h  su2.h
su2-1.1.0/lib/: gauge_conf_def.c  gauge_conf_meas.c  gauge_conf_upd.c  gparam.c  su2.c
su2-1.1.0/src/: main_su2.c
su2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
su2/include/: gauge_conf.h  gparam.h  su2_upd.h
su2/lib/: gauge_conf_meas.c  gauge_conf_upd.c  geometry.c  gparam.c  su2_upd.c
su2/lib/.deps/: gauge_conf_def.Po  gauge_conf_upd.Po  geometry.Po  gparam.Po  su2_upd.Po
su2/src/: conf_check.c  debug_su2.c  main_su2.c
su2/src/.deps/: debug_su2.Po
test_su2_4d/adj_action_test/: risultati_adj_plaquette  template_input_adj2.3.in  template_input_adj2.35.in  template_input_adj2.35_rnd.in  template_input_adj2.3_rnd.in  template_input_adj2.4.in  template_input_adj2.45.in  template_input_adj2.45_rnd.in  template_input_adj2.4_rnd.in  template_input_adj2.5.in  template_input_adj2.55.in  template_input_adj2.55_rnd.in  template_input_adj2.5_rnd.in  template_input_adj2.6.in  template_input_adj2.65.in  template_input_adj2.65_rnd.in  template_input_adj2.6_rnd.in  template_input_adj2.7.in  template_input_adj2.75.in  template_input_adj2.75_rnd.in  template_input_adj2.7_rnd.in
test_su2_4d/asymptotic_freedom_test/: creutz_ratios.txt  data_analysis.py  pow_bin_list.txt
test_su2_4d/creutz_ratio_test/: risultati_creutz.txt  template_input_2.2.in  template_input_2.25.in  template_input_2.3.in  template_input_2.35.in  template_input_2.4.in  template_input_2.5.in
test_su2_4d/wilson_action_test/: risultati_plaquette.txt
test_su2_4d/wilson_loop_test/: risultati_wloop22.txt  template_input_2.2.in  template_input_2.25.in  template_input_2.3.in  template_input_2.35.in  template_input_2.4.in  template_input_2.5.in
(+235 files in other folders)
